--- a/КФГУПР/Практика2.md
+++ b/КФГУПР/Практика2.md
@@ -4,6 +4,8 @@ pip install matplotlib
 pip show matplotlib
 ```
 ![изображение](https://github.com/user-attachments/assets/2e975c2d-456a-41ea-a648-a849cd825ac5)
+![image](https://github.com/user-attachments/assets/f26556c3-dbd6-4af1-9b06-2f562ab00d74)
+
 ## Задание 2
 ```
 git clone https://github.com/expressjs/express.git
