--- a/КФГУПР/Практика2.md
+++ b/КФГУПР/Практика2.md
@@ -13,3 +13,118 @@ cd express
 cat package.json
 ```
 ![изображение](https://github.com/user-attachments/assets/17f15b5f-96fe-4c67-ab23-a69cd0e92043)
+## Задание 3
+```
+pip install pipdeptree
+pipdeptree --packages matplotlib
+```
+![изображение](https://github.com/user-attachments/assets/6ce40d39-8227-4ec1-b2de-25ee9c77878c)
+
+```
+cat package.json
+```
+![изображение](https://github.com/user-attachments/assets/bf772994-4a86-4edb-948e-7305f647a1e0)
+
+```
+digraph G {
+    node [shape=box];
+
+    express -> "accepts";
+    express -> "body-parser";
+    express -> "content-disposition";
+    express -> "content-type";
+    express -> "cookie";
+    express -> "cookie-signature";
+    express -> "debug";
+    express -> "depd";
+    express -> "encodeurl";
+    express -> "etag";
+    express -> "finalhandler";
+    express -> "fresh";
+    express -> "http-errors";
+    express -> "merge-descriptors";
+    express -> "methods";
+    express -> "mime-types";
+    express -> "on-finished";
+    express -> "once";
+    express -> "parseurl";
+    express -> "qs";
+    express -> "range-parser";
+    express -> "router";
+    express -> "safe-buffer";
+    express -> "send";
+    express -> "serve-static";
+    express -> "setprototypeof";
+    express -> "statuses";
+    express -> "type-is";
+    express -> "utils-merge";
+    express -> "vary";
+}
+```
+![изображение](https://github.com/user-attachments/assets/08768d59-67cb-4088-911a-683edf7d5e2d)
+
+```
+digraph G {
+    node [shape=box];
+
+
+    matplotlib -> "contourpy" -> "numpy";
+    matplotlib -> "cycler";
+    matplotlib -> "fonttools";
+    matplotlib -> "kiwisolver";
+    matplotlib -> "numpy";
+    matplotlib -> "packaging";
+    matplotlib -> "pillow";
+    matplotlib -> "pyparsing";
+    matplotlib -> "python-dateutil" -> six;
+}
+```
+![изображение](https://github.com/user-attachments/assets/72e70821-1416-4e63-931d-0982ce29e7ac)
+
+## Задание 4
+```
+include "globals.mzn";  % Импорт библиотеки с all_different
+
+% Массив для представления 6-значного билета
+array[1..6] of var 0..9: ticket;
+
+% Все цифры должны быть различны
+constraint all_different(ticket);
+
+% Сумма первых трёх цифр должна быть равна сумме последних трёх цифр
+constraint ticket[1] + ticket[2] + ticket[3] = ticket[4] + ticket[5] + ticket[6];
+
+% Минимизируем сумму трёх цифр (чтобы найти минимальный билет)
+var int: sum_3_digits = ticket[1] + ticket[2] + ticket[3];
+
+% Найти минимальную сумму
+solve minimize sum_3_digits;
+```
+![изображение](https://github.com/user-attachments/assets/51907183-2fb4-47b9-97da-027fedcbe456)
+
+## Задание 5
+```
+% Определение версий с уникальными именами
+enum VersionsMenu = { menu_v1_0_0, menu_v1_1_0, menu_v1_2_0, menu_v1_3_0, menu_v1_4_0, menu_v1_5_0 };
+enum VersionsDropdown = { dropdown_v1_8_0, dropdown_v2_0_0, dropdown_v2_1_0, dropdown_v2_2_0, dropdown_v2_3_0 };
+enum VersionsIcons = { icons_v1_0_0, icons_v2_0_0 };
+
+% Переменные для выбранных версий
+var VersionsMenu: menu_version;
+var VersionsDropdown: dropdown_version;
+var VersionsIcons: icons_version;
+
+% Зависимости версий
+constraint
+    if menu_version = menu_v1_5_0 then dropdown_version in {dropdown_v2_3_0, dropdown_v2_2_0} /\ icons_version = icons_v2_0_0
+    elseif menu_version = menu_v1_4_0 then dropdown_version in {dropdown_v2_2_0, dropdown_v2_1_0} /\ icons_version = icons_v2_0_0
+    elseif menu_version = menu_v1_3_0 then dropdown_version in {dropdown_v2_1_0, dropdown_v2_0_0} /\ icons_version = icons_v1_0_0
+    elseif menu_version = menu_v1_2_0 then dropdown_version in {dropdown_v2_0_0, dropdown_v1_8_0} /\ icons_version = icons_v1_0_0
+    elseif menu_version = menu_v1_1_0 then dropdown_version = dropdown_v1_8_0 /\ icons_version = icons_v1_0_0
+    else dropdown_version = dropdown_v1_8_0 /\ icons_version = icons_v1_0_0
+    endif;
+
+% Минимизация версии root, которая зависит от версии menu
+solve minimize menu_version;
+```
+![изображение](https://github.com/user-attachments/assets/44ade8f2-5ef3-454e-9d1d-cf384c029bd6)
