--- a/КФГУПР/Практика2.md
+++ b/КФГУПР/Практика2.md
@@ -3,8 +3,12 @@
 pip install matplotlib
 pip show matplotlib
 ```
-![изображение](https://github.com/user-attachments/assets/2e975c2d-456a-41ea-a648-a849cd825ac5)
-![image](https://github.com/user-attachments/assets/f26556c3-dbd6-4af1-9b06-2f562ab00d74)
+![image](https://github.com/user-attachments/assets/168adc9c-f78f-459e-8757-ef407d6c6ec9)
+![image](https://github.com/user-attachments/assets/de436df8-42eb-432c-afc1-9e76f28e0457)
+![image](https://github.com/user-attachments/assets/ea6f8469-3336-47ae-8df2-93cb6e610cdb)
+
+
+
 
 ## Задание 2
 ```
@@ -12,7 +16,8 @@ git clone https://github.com/expressjs/express.git
 cd express
 cat package.json
 ```
-![изображение](https://github.com/user-attachments/assets/17f15b5f-96fe-4c67-ab23-a69cd0e92043)
+![image](https://github.com/user-attachments/assets/66b2d580-13b5-48e6-a2af-4a1f23ffe02e)
+
 ## Задание 3
 ```
 pip install pipdeptree
@@ -24,6 +29,10 @@ pipdeptree --packages matplotlib
 cat package.json
 ```
 ![изображение](https://github.com/user-attachments/assets/bf772994-4a86-4edb-948e-7305f647a1e0)
+![image](https://github.com/user-attachments/assets/655017b4-4be2-4237-9a7a-31ff651ee398)
+![image](https://github.com/user-attachments/assets/61ad0111-84da-48c5-9ac2-89985b634030)
+
+
 
 ```
 digraph G {
@@ -128,3 +137,123 @@ constraint
 solve minimize menu_version;
 ```
 ![изображение](https://github.com/user-attachments/assets/44ade8f2-5ef3-454e-9d1d-cf384c029bd6)
+### Задание 6
+```
+int: root = 100;
+var 100..300: foo;
+var 100..300: target;
+var 100..300: left;
+var 100..300: right;
+var 100..300: shared;
+
+
+constraint if root = 100 then foo >= 100 /\ foo < 200 /\ target >= 200 /\ target < 300 endif;
+constraint if foo = 110 then left >= 100 /\ left < 200 /\ right >= 100 /\ right < 200 endif;
+constraint if left = 100 then shared >= 100 endif;
+constraint if right = 100 then shared < 200 endif;
+constraint if shared = 100 then target >= 100 /\ target < 200 endif; 
+```
+![изображение](https://github.com/user-attachments/assets/5a3f05f5-5ea2-4efc-8d5b-be4c714ed709)
+
+## Задание 7
+```
+# Структура данных для хранения пакетов и их зависимостей
+packages = {
+    'root': {
+        '1.0.0': {
+            'dependencies': {
+                'foo': '^1.0.0',
+                'target': '^2.0.0'
+            }
+        }
+    },
+    'foo': {
+        '1.1.0': {
+            'dependencies': {
+                'left': '^1.0.0',
+                'right': '^1.0.0'
+            }
+        },
+        '1.0.0': {
+            'dependencies': {}
+        }
+    },
+    'left': {
+        '1.0.0': {
+            'dependencies': {
+                'shared': '>=1.0.0'
+            }
+        }
+    },
+    'right': {
+        '1.0.0': {
+            'dependencies': {
+                'shared': '<2.0.0'
+            }
+        }
+    },
+    'shared': {
+        '2.0.0': {
+            'dependencies': {}
+        },
+        '1.0.0': {
+            'dependencies': {
+                'target': '^1.0.0'
+            }
+        }
+    },
+    'target': {
+        '2.0.0': {
+            'dependencies': {}
+        },
+        '1.0.0': {
+            'dependencies': {}
+        }
+    }
+}
+
+
+# Функция проверки совместимости версии пакетов
+def check_dependencies(package, version, resolved, packages):
+    # Если пакет уже добавлен в решение, пропускаем
+    if package in resolved:
+        return True
+
+    # Получаем зависимости для указанной версии
+    dependencies = packages[package][version]['dependencies']
+
+    for dep_pkg, dep_version in dependencies.items():
+        # Проверка совместимости версии зависимостей
+        if not resolve_version(dep_pkg, dep_version, packages, resolved):
+            return False
+
+    # Добавляем текущий пакет в решенные
+    resolved[package] = version
+    return True
+
+
+# Функция выбора совместимой версии
+def resolve_version(package, version_range, packages, resolved):
+    # Для простоты обрабатываем только некоторые форматы версий
+    if version_range.startswith('^'):
+        min_version = version_range[1:]  # Минимальная версия для диапазона "^"
+        for version in packages[package]:
+            if version >= min_version and package not in resolved:
+                if check_dependencies(package, version, resolved, packages):
+                    return True
+    return False
+
+
+# Основная функция для решения задачи
+def solve(packages):
+    resolved = {}
+    root_version = '1.0.0'  # Задаем корневую версию
+    if check_dependencies('root', root_version, resolved, packages):
+        print("Решение найдено:", resolved)
+    else:
+        print("Решение не найдено")
+
+
+solve(packages)
+```
+![изображение](https://github.com/user-attachments/assets/5bd279c9-e465-42c2-b9a8-066485ef0fc1)
